# chimera

./: .gitignore  Cargo.toml  Makefile  README.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
assets/screenshots/: .gitkeep
crates/chimera-core/: Cargo.toml
crates/chimera-core/src/: cloudinit.rs  console.rs  lib.rs  manager.rs  metrics.rs  model.rs  net_client.rs  store.rs  supervisor.rs  vmm_client.rs
crates/chimera-core/tests/: e2e_cloudinit.rs  e2e_console.rs  e2e_create.rs  e2e_create_matrix.rs  e2e_failure.rs  e2e_lifecycle.rs  e2e_ops.rs  e2e_reconcile.rs  harness_unit.rs
crates/chimera-core/tests/common/: mod.rs
crates/chimera-gui/: Cargo.toml  build.rs
crates/chimera-gui/src/: app.rs  console.rs  create_dialog.rs  dashboard.rs  detail.rs  helpers.rs  logging.rs  main.rs  metrics_ui.rs  prefs.rs  runtime.rs  settings.rs  setup.rs  style.rs  vm_row.rs
crates/chimera-netd/: Cargo.toml
crates/chimera-netd/src/: main.rs  netops.rs
docs/superpowers/plans/: 2026-06-30-chimera-cloud-init.md  2026-06-30-chimera-e2e-test-framework.md  2026-06-30-chimera-metrics-snapshots-hotplug.md  2026-06-30-chimera-native-gtk-ui.md  2026-06-30-chimera-self-contained-setup-and-chrome.md  2026-06-30-chimera-serial-console.md  2026-06-30-chimera-setup-toggles-and-filechooser.md  2026-06-30-chimera-v0.1.md  2026-07-01-chimera-live-metrics-ui.md  2026-07-01-chimera-logging-and-promptless-netd.md  2026-07-01-chimera-nat-networking.md
docs/superpowers/specs/: 2026-06-30-chimera-cloud-init-design.md  2026-06-30-chimera-e2e-test-framework-design.md  2026-06-30-chimera-metrics-snapshots-hotplug-design.md  2026-06-30-chimera-native-gtk-ui-design.md  2026-06-30-chimera-self-contained-setup-and-chrome-design.md  2026-06-30-chimera-serial-console-design.md  2026-06-30-chimera-setup-toggles-and-filechooser-design.md  2026-06-30-chimera-v0.1-design.md  2026-07-01-chimera-live-metrics-ui-design.md  2026-07-01-chimera-logging-and-promptless-netd-design.md  2026-07-01-chimera-nat-networking-design.md
packaging/: org.chimera.netd.policy
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  console_commands.rs  lib.rs  main.rs
src/lib/: api.ts  types.ts
src/lib/components/: CreateWizard.svelte  VmList.svelte  VmRow.svelte
src/routes/: +layout.svelte  +page.svelte
src/routes/vm/[id]/: +page.svelte  +page.ts
src/routes/vm/[id]/console/: +page.svelte
tests/e2e/: README.md  setup.sh  teardown.sh
