[workspace]
resolver = "2"
members = ["crates/chimera-core", "crates/chimera-netd", "crates/chimera-gui"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
toml = "1.0"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
