[package]
name = "chimera-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
hyper = { version = "0.14", features = ["client", "http1"] }
hyperlocal = "0.8"
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
nix = { version = "0.27", features = ["feature", "process", "signal"] }
dirs = "5"
chrono = { version = "0.4", features = ["clock"] }
fatfs = "0.3"
fscommon = "0.1"
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
