[package]
name = "chimera-gui"
version.workspace = true
edition.workspace = true

[[bin]]
name = "chimera"
path = "src/main.rs"

[dependencies]
chimera-core = { path = "../chimera-core" }
tokio = { workspace = true }
relm4 = "0.11"
gtk = { package = "gtk4", version = "0.11", features = ["v4_22"] }
adw = { package = "libadwaita", version = "0.9", features = ["v1_9"] }
vte = { package = "vte4", version = "0.10" }
async-channel = "2"
