[package]
name = "chimera-gui"
version.workspace = true
edition.workspace = true

[[bin]]
name = "chimera"
path = "src/main.rs"

[dependencies]
chimera-core = { path = "../chimera-core" }
tokio = { workspace = true }
relm4 = { version = "0.11", features = ["libadwaita"] }
gtk = { package = "gtk4", version = "0.11", features = ["v4_14"] }
adw = { package = "libadwaita", version = "0.9", features = ["v1_5"] }
vte = { package = "vte4", version = "0.10" }
async-channel = "2"
serde = { workspace = true }
toml = { workspace = true }
dirs = "5"
tempfile = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
